--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mongodb": "^6.11.0",
     "mongoose": "^8.8.4",
     "multer": "^1.4.5-lts.1",
+    "nocache": "^4.0.0",
     "nodemailer": "^6.9.16",
     "nodemon": "^3.1.7",
     "passport": "^0.7.0",
